# llm-pruning

./: .env.example  .gitignore  FINDINGS.md  FINDINGS_SEMI_STRUCTURED.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  semi_structured_sparsity_plan.md  structured_sparsity_plan.md
configs/: base.yaml
configs/datasets/: mmlu.yaml
configs/experiments/: all_models_mmlu_semi_structured_2_4_sweep.yaml  all_models_mmlu_semi_structured_4_8_sweep.yaml  all_models_mmlu_structured_mlp_sweep.yaml  all_models_mmlu_sweep.yaml  all_models_semi_structured_2_4_sft.yaml  (+23 more)
findings/: FINDINGS_GEMMA4_STRUCTURED.md  FINDINGS_SEMI_STRUCTURED.md  FINDINGS_SFT_COMPARISON.md  FINDINGS_STRUCTURED.md  FINDINGS_SUSTAINABILITY.md  FINDINGS_UNSTRUCTURED.md
notebooks/: inspect_results.ipynb
plan/: semi_structured_2_4_sparse_finetuning_plan.md  structured_sparse_finetuning_plan.md  unstructured_sparsity_plan.md
scripts/: diag_gemma4_eval.py  evaluate_model.py  export_summary.py  merge_sweep_results.py  plot_results.py  plot_sft_comparison.py  plot_structured_results.py  plot_sustainability_report.py  run_experiment.py  run_sparse_finetune.py  run_sweep.py  smoke_test.py  summarize_sparse_sft.py  validate_env.py  validate_sparse_sft_masks.py
slurm/: diag_gemma4_eval.slurm  run_all_models_structured_sft.slurm  run_gemma4_semi_structured_sweep.slurm  run_gemma4_structured_sweep.slurm  run_gemma4_unstructured_sweep.slurm  run_mmlu_pruning_sweep.slurm  run_mmlu_semi_structured_full_sweep.slurm  run_mmlu_semi_structured_sweep.slurm  run_mmlu_structured_sweep.slurm
(+301 files in other folders)
