[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pruning-mmlu"
version = "0.1.0"
description = "Global unstructured pruning sweeps for causal LMs on MMLU."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "accelerate",
  "pyyaml",
  "pandas",
  "numpy",
  "matplotlib",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
